syntax = "proto3";

option java_multiple_files = true;
option java_package = "by.temnaikov.grpc.model";

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}